// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards basic should render cards 1`] = `
Array [
  <div
    class="Card-cardContainer-0-1-1 Card-cardContainer-0-1-4"
  >
    <div
      class="Card-cardContent-0-1-2"
    >
      A
    </div>
  </div>,
  <div
    class="Card-cardContainer-0-1-1 Card-cardContainer-0-1-5"
  >
    <div
      class="Card-cardContent-0-1-2"
    >
      1
    </div>
  </div>,
  <div
    class="Card-cardContainer-0-1-1 Card-cardContainer-0-1-6"
  >
    <div
      class="Card-cardContent-0-1-2"
    >
      4
    </div>
  </div>,
]
`;

exports[`Cards basic should render correctly one card 1`] = `
<div
  class="Card-cardContainer-0-1-1 Card-cardContainer-0-1-3"
>
  <div
    class="Card-cardContent-0-1-2"
  >
    A
  </div>
</div>
`;
